@@ -214,7 +214,7 @@ public:
 		debug(LOG_DEBUG, DEBUG_LOG, 0, "%s adapter Pixel type %s, "
 			"scale = %d",
 			getSize().toString().c_str(),
-			astro::demangle_cstr(Pixel()), _scale);
+			astro::demangle_string(Pixel()).c_str(), _scale);
 	}
 	GainAdapter(const ConstImageAdapter<Pixel>& image, double gain,
 		double brightness, int scale = 0)
@@ -223,7 +223,7 @@ public:
 		debug(LOG_DEBUG, DEBUG_LOG, 0, "%s adapter Pixel type %s, "
 			"gain = %f, brightness = %f, scale = %d",
 			getSize().toString().c_str(),
-			astro::demangle_cstr(Pixel()),
+			astro::demangle_string(Pixel()).c_str(),
 			_gain, _brightness, _scale);
 	}
 	virtual unsigned char	pixel(int x, int y) const {
@@ -305,7 +305,7 @@ template<typename Pixel>
 QImage	*Image2Pixmap::convertMono(const ConstImageAdapter<Pixel>& image) {
 	ImageSize	size = image.getSize();
 	debug(LOG_DEBUG, DEBUG_LOG, 0, "converting Image<%s> of size %s",
-		astro::demangle_cstr(Pixel()),
+		astro::demangle_string(Pixel()).c_str(),
 		size.toString().c_str());
 	Histogram<double>	*histo = new Histogram<double>(256);
 	histo->logarithmic(_logarithmic);
@@ -467,7 +467,7 @@ template<typename Pixel>
 QImage	*Image2Pixmap::convertRGB(const ConstImageAdapter<RGB<Pixel> >& image) {
 	ImageSize	size = image.getSize();
 	debug(LOG_DEBUG, DEBUG_LOG, 0, "converting RGB<%s> image of size %s",
-		astro::demangle_cstr(Pixel()),
+		astro::demangle_string(Pixel()).c_str(),
 		size.toString().c_str());
 	Histogram<RGB<double> >	*histo = new Histogram<RGB<double> >(256);
 	histo->logarithmic(_logarithmic);
