@@ -1,5 +1,8 @@
 ChangeLog for the Qt GUI to Astrophotography
 
+20200108:
+	* fix bad demangle_cstr calls
+
 20200824:
 	* make sure image resizing still works if the image dimensions are
 	  no longer divisible by a high power of 2
